[package]
name = "hew-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure Rust runtime for the Hew actor language (libhew_rt)"
repository = "https://github.com/hew-lang/hew"
readme = "README.md"
keywords = ["hew", "programming-language", "runtime", "actors"]
categories = ["compilers", "concurrency"]

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["full"]
# Everything — backwards compatible, same as before features existed
full = ["encryption", "profiler", "quic"]
# Remaining features (most ecosystem modules extracted to standalone packages)
encryption = ["dep:snow"]

# QUIC transport (replaces TCP + Noise with QUIC/TLS 1.3)
quic = [
  "dep:bytes",
  "dep:quinn",
  "dep:rustls",
  "dep:rustls-webpki",
  "dep:rcgen",
  "dep:tokio",
  "dep:rustls-pki-types",
]

# Built-in profiler (dashboard, pprof export)
profiler = [
  "dep:hyper",
  "dep:hyper-util",
  "dep:http-body-util",
  "dep:tokio",
  "dep:flate2",
]
# Deterministic in-process SimTransport for HEW-DIST-SPEC §14 property tests.
# Test-only — never enabled in `default` or `full`. The module is also
# auto-enabled under `cfg(test)` so unit tests inside the crate can exercise it
# without the feature flag, but integration tests must opt in via
# `--features sim-transport`. Adds no production dependencies.
sim-transport = []
# OpenTelemetry OTLP/HTTP trace exporter (no tokio — pure sync HTTP via ureq)
otel = ["dep:ureq"]

[dependencies]
# CBOR codec (R62: CBOR+CDDL replaces HBF; ciborium chosen by Council B).
# Added in W0 (dependency available); encoding usage added in W1-W6.
ciborium = "0.2"
# Serde derive support for the CBOR envelope types (W1+).
serde.workspace = true
# Core dependencies — always linked (collections, print, string, etc.)
hew-cabi = { path = "../hew-cabi" }
libc.workspace = true
tracing.workspace = true
zeroize = { version = "1", features = ["zeroize_derive"] }

# Threading/networking deps — not available on wasm32
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
rand = "0.10.1"
socket2 = "0.6"

# Optional ecosystem dependencies
snow = { version = "0.10", optional = true }
flate2 = { version = "1", optional = true }
hyper = { version = "1", optional = true, features = ["http1", "server"] }
hyper-util = { version = "0.1", optional = true, features = ["tokio", "http1"] }
http-body-util = { version = "0.1", optional = true }
# Sync HTTP client for the OTel OTLP/HTTP exporter (no async runtime needed).
# TLS is opt-in — most OTel endpoints (Jaeger, Tempo) run on plain HTTP locally.
ureq = { version = "3", optional = true, default-features = false }

# QUIC transport dependencies (optional, behind "quic" feature)
# bytes is a direct dep (not transitive-only) because quic_mesh's datagram
# surface exposes Bytes in its public API, matching the quinn wire type.
bytes = { version = "1", optional = true }
quinn = { version = "0.11", optional = true, default-features = false, features = [
  "runtime-tokio",
  "rustls-ring",
] }
rustls = { version = "0.23", optional = true, default-features = false, features = [
  "ring",
  "std",
] }
# Explicit rustls-webpki pin to fix CRL parse panic (GHSA-82j2-j2ch-gfr8) and name constraint validation.
# rustls v0.23 accepts ^0.103.5; we pin to 0.103.13 which includes both security fixes.
rustls-webpki = { version = "0.103.13", optional = true }
rcgen = { version = "0.14", optional = true }
tokio = { version = "1", optional = true, default-features = false, features = [
  "rt-multi-thread",
  "net",
  "time",
  "sync",
  "macros",
] }
rustls-pki-types = { version = "1", optional = true, features = ["std"] }

[dev-dependencies]
# Safe handle wrappers for integration tests (RAII over runtime FFI).
hew-runtime-testkit = { path = "../hew-runtime-testkit" }
# For unit tests
rand = "0.10.1"
tempfile.workspace = true
tracing-subscriber.workspace = true
# For the OTel integration test mock receiver (direct HTTP POST)
ureq = { version = "3", default-features = false }
# For profiler server JSON-escape unit tests
serde_json.workspace = true

# Property-based testing for the deterministic SimTransport (HEW-DIST-SPEC §14
# invariants). Dev-only — never linked into release runtime builds. Scoped to
# non-wasm targets because `proptest` transitively depends on `wait-timeout`,
# which does not compile for `wasm32-wasip1` (no process/timeout primitives).
# The `sim-transport` integration test that consumes proptest is itself
# native-only, so this scoping costs no test coverage on wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "1"

[lints]
workspace = true
