[package]
name = "hew-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure Rust runtime for the Hew actor language (libhew_rt)"
repository = "https://github.com/hew-lang/hew"
readme = "README.md"
keywords = ["hew", "programming-language", "runtime", "actors"]
categories = ["compilers", "concurrency"]

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["full"]
# Everything — backwards compatible, same as before features existed
full = ["encryption", "profiler", "quic"]
# Remaining features (most ecosystem modules extracted to standalone packages)
encryption = ["dep:snow"]

# QUIC transport (replaces TCP + Noise with QUIC/TLS 1.3)
quic = [
  "dep:bytes",
  "dep:quinn",
  "dep:rustls",
  "dep:rustls-webpki",
  "dep:rcgen",
  "dep:tokio",
  "dep:rustls-pki-types",
]

# Built-in profiler (dashboard, pprof export)
profiler = [
  "dep:hyper",
  "dep:hyper-util",
  "dep:http-body-util",
  "dep:tokio",
  "dep:flate2",
]
# Deterministic in-process SimTransport for HEW-DIST-SPEC §14 property tests.
# Test-only — never enabled in `default` or `full`. The module is also
# auto-enabled under `cfg(test)` so unit tests inside the crate can exercise it
# without the feature flag, but integration tests must opt in via
# `--features sim-transport`. Adds no production dependencies.
sim-transport = []
# OpenTelemetry OTLP/HTTP trace exporter (no tokio — pure sync HTTP via ureq)
otel = ["dep:ureq"]

# Deterministic forced-cancellation test hook for #2437's proving gate: pauses
# a spawned task's OS thread before it runs any generated code, releasing it
# only after a REAL `hew_task_scope_cancel` call has completed, so the task's
# own FIRST FunctionEntry cooperate check deterministically observes
# cancellation instead of racing OS thread scheduling. Test-only — never
# enabled in `default` or `full`. Auto-enabled under `cfg(test)` for unit
# tests inside the crate; a compiled `.hew` exec must opt in via
# `--features forced-cancel-test` (mirrors `sim-transport`). Adds no
# production dependencies.
forced-cancel-test = []

[dependencies]
# CBOR body codec (ciborium, RFC 8949); CDDL schema in schemas/envelope.cddl.
ciborium = "0.2"
# Serde derive support for the CBOR envelope types (W1+).
serde.workspace = true
# Text wire codec (wire_text.rs): the CBOR↔JSON/YAML bridge parses and emits
# JSON/YAML through serde, then transcodes the value tree to/from the CBOR body
# codec via a per-type tag↔name descriptor. Reuses the workspace serde_json and
# the established serde_yaml (0.9, matching hew-std's choice).
serde_json.workspace = true
serde_yaml = "0.9"
# Core dependencies — always linked (collections, print, string, etc.)
hew-cabi = { path = "../hew-cabi" }
libc.workspace = true
tracing.workspace = true
zeroize = { version = "1.9.0", features = ["zeroize_derive"] }

# Threading/networking deps — not available on wasm32
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
rand = "0.10.1"
socket2 = "0.6.4"

# Optional ecosystem dependencies
snow = { version = "0.10", optional = true }
flate2 = { version = "1", optional = true }
hyper = { version = "1.10.1", optional = true, features = ["http1", "server"] }
hyper-util = { version = "0.1", optional = true, features = ["tokio", "http1"] }
http-body-util = { version = "0.1", optional = true }
# Sync HTTP client for the OTel OTLP/HTTP exporter (no async runtime needed).
# TLS is opt-in — most OTel endpoints (Jaeger, Tempo) run on plain HTTP locally.
ureq = { version = "3", optional = true, default-features = false }

# QUIC transport dependencies (optional, behind "quic" feature)
# bytes is a direct dep (not transitive-only) because quic_mesh's datagram
# surface exposes Bytes in its public API, matching the quinn wire type.
bytes = { version = "1", optional = true }
quinn = { version = "0.11", optional = true, default-features = false, features = [
  "runtime-tokio",
  "rustls-ring",
] }
rustls = { version = "0.23", optional = true, default-features = false, features = [
  "ring",
  "std",
] }
# Explicit rustls-webpki pin to fix CRL parse panic (GHSA-82j2-j2ch-gfr8) and name constraint validation.
# rustls v0.23 accepts ^0.103.5; we pin to 0.103.13 which includes both security fixes.
rustls-webpki = { version = "0.103.13", optional = true }
rcgen = { version = "0.14.8", optional = true }
tokio = { version = "1", optional = true, default-features = false, features = [
  "rt-multi-thread",
  "net",
  "time",
  "sync",
  "macros",
] }
rustls-pki-types = { version = "1", optional = true, features = ["std"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
] }

[dev-dependencies]
# For unit tests
rand = "0.10.1"
tempfile.workspace = true
tracing-subscriber.workspace = true
# For the OTel integration test mock receiver (direct HTTP POST)
ureq = { version = "3", default-features = false }
# For profiler server JSON-escape unit tests
serde_json.workspace = true

[[bench]]
name = "hashmap_layout_kernel"
harness = false

[[bench]]
name = "observe_overhead"
harness = false

# Property-based testing for the deterministic SimTransport (HEW-DIST-SPEC §14
# invariants). Dev-only — never linked into release runtime builds. Scoped to
# non-wasm targets because `proptest` transitively depends on `wait-timeout`,
# which does not compile for `wasm32-wasip1` (no process/timeout primitives).
# The `sim-transport` integration test that consumes proptest is itself
# native-only, so this scoping costs no test coverage on wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "1"
# CDDL validator: the wire-body conformance test feeds the authored
# `schemas/wire-body.cddl` text + the codegen-emitted CBOR bytes into a real
# RFC 8610 validator so the schema is the authority, not a hand-mirrored
# structural assertion that could silently drift from the CDDL. Test-only and
# native-only (the crate pulls a full CDDL parser/AST it never needs in the
# runtime binary, and is irrelevant on wasm where there is no internode wire).
cddl = "0.10"
# Safe handle wrappers for integration tests (RAII over runtime FFI). Native
# only: wraps FFI (e.g. hew_actor_trap) the runtime does not export on wasm32.
hew-runtime-testkit = { path = "../hew-runtime-testkit" }
# Microbenchmarks for the HashMap layout-kernel (Stage C0a baseline + regression
# signal for Stage C/D). Harness is disabled per bench; see benches/. Scoped to
# non-wasm targets: criterion pulls Rayon, which refuses to compile for
# wasm32-wasip1. The benches are native-only, so this costs no coverage.
criterion = { version = "0.8.2", features = ["html_reports"] }

[lints]
workspace = true
