[package]
name = "hew-sandbox-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for Hew sandbox bytecode export"
repository = "https://github.com/hew-lang/hew"
readme = "README.md"
keywords = ["hew", "sandbox", "wasm", "webassembly"]
categories = ["compilers", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
# -O1 reduces raw, gzip-9, and brotli-11 transfer size vs the unoptimised
# baseline.  Higher levels (-O2/-Os/-Oz) aggressively inline and restructure
# code, breaking the LTO-laid-out locality the compressor exploits and
# producing a net transfer-size regression.  --enable-bulk-memory is required
# because the Rust/LLVM backend emits memory.copy/fill (bulk-memory proposal).
wasm-opt = ["-O1", "--enable-bulk-memory"]

[dependencies]
hew-parser = { path = "../hew-parser" }
hew-types = { path = "../hew-types" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
wasm-bindgen = "0.2.125"

[dev-dependencies]
assert_cmd = "2"
hew-testutil = { path = "../hew-testutil" }
tempfile.workspace = true
walkdir = "2"
