[package]
name = "hew-serialize"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AST serialization for Hew compiler"
repository = "https://github.com/hew-lang/hew"
readme = "README.md"
keywords = ["hew", "programming-language", "msgpack", "serialization"]
categories = ["compilers", "encoding"]

[lints]
workspace = true

[dependencies]
hew-parser = { path = "../hew-parser" }
hew-types = { path = "../hew-types" }
stacker = "0.1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
