[package]
name = "hew-serialize"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AST serialization for Hew compiler"
repository = "https://github.com/hew-lang/hew"
readme = "README.md"
keywords = ["hew", "programming-language", "msgpack", "serialization"]
categories = ["compilers", "encoding"]

[lints]
workspace = true

[dependencies]
hew-parser = { path = "../hew-parser" }
hew-types = { path = "../hew-types" }
hew-wirecodec = { path = "../hew-wirecodec" }
stacker = "0.1"
rmp-serde = "1"
serde.workspace = true
serde_json.workspace = true

[features]
# Keep the legacy hand-written WireDecl msgpack path compiled only when
# explicitly requested. Default builds expose only
# `serialize_wire_decl_via_plan`. Lane 7b stage 7 re-enables the legacy
# path to run the 10,000-iteration random-corpus comparator against it.
legacy-wire-msgpack = []
