[package]
name = "hew-testutil"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared integration-test utilities for Hew"
publish = false

[dependencies]
fd-lock.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
