[package]
name = "hew-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Type checker for Hew language"
repository = "https://github.com/hew-lang/hew"
readme = "README.md"
keywords = ["hew", "programming-language", "type-checker"]
categories = ["compilers"]

[lints]
workspace = true

[dependencies]
hew-parser = { path = "../hew-parser" }
stacker = "0.1"

[build-dependencies]
hew-parser = { path = "../hew-parser" }
