[package]
name = "hew-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Type checker for Hew language"
repository = "https://github.com/hew-lang/hew"
readme = "README.md"
keywords = ["hew", "programming-language", "type-checker"]
categories = ["compilers"]

[lints]
workspace = true

[dependencies]
hew-parser = { path = "../hew-parser" }
serde.workspace = true
siphasher = "1"
stacker.workspace = true
# Used to validate regex literal patterns at compile time (same engine as
# std/text/regex runtime). Checker rejects syntactically invalid patterns
# before any code generation runs.
regex = "1"

[dev-dependencies]
serde_json.workspace = true
