[package]
name = "hew-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Type checker for Hew language"
repository = "https://github.com/hew-lang/hew"
readme = "README.md"
keywords = ["hew", "programming-language", "type-checker"]
categories = ["compilers"]

[lints]
workspace = true

[dependencies]
hew-parser = { path = "../hew-parser" }
serde.workspace = true
siphasher = "1"
stacker.workspace = true
# Used to validate regex literal patterns at compile time (same engine as
# std/text/regex runtime). Checker rejects syntactically invalid patterns
# before any code generation runs.
regex = "1"

[dev-dependencies]
serde_json.workspace = true
# W4.001 Stage C0b — `resolved_call_kernel_symbols` resolves Stage B
# registry symbol names against the live runtime at *link time* (not
# `dlsym`). Statically linking `hew-runtime` here folds its archive
# into every test binary, so the `extern "C"` decls in that test fail
# at link if the runtime stops exporting the canonical kernel symbols.
# `hew-cabi` re-declares the layout descriptor `extern "C" static`s the
# same test takes the address of.
hew-runtime = { path = "../hew-runtime" }
hew-cabi = { path = "../hew-cabi" }
