[package]
name = "hew-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for Hew analysis-only diagnostics and editor tooling"
repository = "https://github.com/hew-lang/hew"
readme = "README.md"
keywords = ["hew", "programming-language", "wasm", "webassembly"]
categories = ["compilers", "wasm"]

[lib]
# Keep an rlib alongside the browser-facing cdylib so the dedicated
# playground/browser smoke lane can run `cargo test -p hew-wasm --lib`.
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
hew-analysis = { path = "../hew-analysis" }
hew-lexer = { path = "../hew-lexer" }
hew-parser = { path = "../hew-parser" }
hew-types = { path = "../hew-types" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
