[package]
name = "hew-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for Hew analysis-only diagnostics and editor tooling"
repository = "https://github.com/hew-lang/hew"
readme = "README.md"
keywords = ["hew", "programming-language", "wasm", "webassembly"]
categories = ["compilers", "wasm"]

[lib]
# Keep an rlib alongside the browser-facing cdylib so the dedicated
# playground/browser smoke lane can run `cargo test -p hew-wasm --lib`.
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
# -O1 reduces raw, gzip-9, and brotli-11 transfer size vs the unoptimised
# baseline.  Higher levels (-O2/-Os/-Oz) aggressively inline and restructure
# code, breaking the LTO-laid-out locality the compressor exploits and
# producing a net transfer-size regression.  --enable-bulk-memory is required
# because the Rust/LLVM backend emits memory.copy/fill (bulk-memory proposal).
wasm-opt = ["-O1", "--enable-bulk-memory"]

[dependencies]
hew-analysis = { path = "../hew-analysis" }
hew-hir = { path = "../hew-hir" }
hew-lexer = { path = "../hew-lexer" }
hew-parser = { path = "../hew-parser" }
hew-types = { path = "../hew-types" }
wasm-bindgen = "0.2.125"
serde.workspace = true
serde_json.workspace = true
